--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="badassapps.aaron.urimage.MainActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lv">
-    </ListView>
+        android:id="@+id/imageView"/>
 </RelativeLayout>
